--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
+    <main>
+        <section id="iphone"> 
+
+        </section>
+        
+        <section id="redes">
+
+
+        </section>
+    </main>
     
 </body>
 </html>
