--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
 <body>
     <main>
         <section id="iphone"> 
-            <iframe src="home.html" frameborder="0" name="tela" id="tela"></iframe>
+            <iframe src="home.html" frameborder="0" name="tela" id="tela">
+                [Seu navegador não e compativel com o conteudo]
+            </iframe>
         </section>
         
         <section id="redes">
-
-
+            <a href="#"> <img src="imagens/logo-home.jpg" alt="Home"></a> <br>
+            <a href="#"> <img src="imagens/logo-youtube.jpg" alt="Youtube"></a> <br>
+            <a href="#"> <img src="imagens/logo-github.jpg" alt="GitHub"></a> <br>
+            <a href="#"> <img src="imagens/logo-instagram.jpg" alt="Instagram"></a> <br>
+            <a href="#"> <img src="imagens/logo-twitter.jpg" alt="Twitter"></a> <br>
+            <a href="#"> <img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
         </section>
     </main>
     
